@@ -1,3 +1,7 @@
+2017-06-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added some debug information
+
 2017-05-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Verified compatibility with TYPO3 CMS 8
